--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
@@ -4,12 +4,12 @@
 		<TargetFramework>net5.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
-		<PackageVersion>1.2.28</PackageVersion>
+		<PackageVersion>1.3.29</PackageVersion>
 	</PropertyGroup>
 
 	<!--Для NuGet-->
 	<PropertyGroup>
-		<PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+		<PackageProjectUrl>https://github.com/dex-it/dex-common/tree/netcore-5/src/Dex.Cap</PackageProjectUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Authors>dex team</Authors>
 		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
@@ -23,6 +23,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+		<PackageReference Include="Npgsql" Version="5.0.10" />
 	</ItemGroup>
 	<!--/Для NuGet-->
 
