--- a/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
@@ -3,14 +3,14 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <PackageVersion>1.2.28</PackageVersion>
-    <LangVersion>default</LangVersion>
+    <PackageVersion>1.3.29</PackageVersion>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
 
   
   <!--Для NuGet-->
   <PropertyGroup>
-    <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/netcore-5/src/Dex.Cap</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>dex team</Authors>
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
@@ -30,6 +30,9 @@
     <Compile Remove="Neo4j\**" />
     <Compile Update="BaseOnceExecutor.cs">
       <DependentUpon>IOnceExecutor.cs</DependentUpon>
+    </Compile>
+    <Compile Update="StrategyOnceExecutor.cs">
+      <DependentUpon>IStrategyOnceExecutor.cs</DependentUpon>
     </Compile>
   </ItemGroup>
 
