--- a/src/Dex.Cap/Tests/Dex.Cap.Ef.Tests/Dex.Cap.Ef.Tests.csproj
+++ b/src/Dex.Cap/Tests/Dex.Cap.Ef.Tests/Dex.Cap.Ef.Tests.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <IsPackable>false</IsPackable>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -38,6 +39,15 @@
       </Compile>
       <Compile Update="OutboxTests\Handlers\IdempotentCreateUserCommandHandler.cs">
         <DependentUpon>TestUserCreatorCommand.cs</DependentUpon>
+      </Compile>
+      <Compile Update="OnceExecutorTests\Strategies\Concrete1ExecutionStrategy.cs">
+        <DependentUpon>Concrete1ExecutionStrategyRequest.cs</DependentUpon>
+      </Compile>
+      <Compile Update="OnceExecutorTests\Strategies\Concrete2ExecutionStrategy.cs">
+        <DependentUpon>Concrete2ExecutionStrategyRequest.cs</DependentUpon>
+      </Compile>
+      <Compile Update="OnceExecutorTests\Strategies\Concrete3ExecutionStrategy.cs">
+        <DependentUpon>Concrete3ExecutionStrategyRequest.cs</DependentUpon>
       </Compile>
     </ItemGroup>
 
