--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.ClickHouse/Dex.Cap.OnceExecutor.ClickHouse.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.ClickHouse/Dex.Cap.OnceExecutor.ClickHouse.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <PackageVersion>2.3.26</PackageVersion>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <PackageVersion>2.4.29</PackageVersion>
   </PropertyGroup>
 
   <!--Для NuGet-->
