--- a/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
@@ -3,13 +3,15 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <PackageVersion>2.3.28</PackageVersion>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <PackageVersion>2.4.29</PackageVersion>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
 
   
   <!--Для NuGet-->
   <PropertyGroup>
-    <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.Cap</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>dex team</Authors>
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
@@ -29,6 +31,9 @@
     <Compile Remove="Neo4j\**" />
     <Compile Update="BaseOnceExecutor.cs">
       <DependentUpon>IOnceExecutor.cs</DependentUpon>
+    </Compile>
+    <Compile Update="StrategyOnceExecutor.cs">
+      <DependentUpon>IStrategyOnceExecutor.cs</DependentUpon>
     </Compile>
   </ItemGroup>
 
