--- a/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <PackageVersion>1.3.29</PackageVersion>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <PackageVersion>1.4.30</PackageVersion>
     <LangVersion>9</LangVersion>
   </PropertyGroup>
 
