add ExecutionStrategy in TransactionScope, add documentation, inc. nuget version (#108)
* add documentation, rename methods, fix warnings, add CLSCompliant, inc. nuget version in OnceExecutor (#106)

* add ExecutionStrategy in TransactionScope (in OnceExecutor and Outbox), add Tests, update Readme (#107)

Co-authored-by: anatoly.sirik <anatoly.sirik@fors.ru>

--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
-		<PackageVersion>2.4.29</PackageVersion>
+		<PackageVersion>2.5.31</PackageVersion>
 	</PropertyGroup>
 
 	<!--Для NuGet-->
@@ -28,6 +28,7 @@
 	<!--/Для NuGet-->
 
 	<ItemGroup>
+		<ProjectReference Include="..\Dex.Cap.Common.Ef\Dex.Cap.Common.Ef.csproj" />
 		<ProjectReference Include="..\Dex.Cap.OnceExecutor\Dex.Cap.OnceExecutor.csproj" />
 	</ItemGroup>
 
