--- a/src/Dex.Cap/Dex.Cap.Outbox.Ef/Dex.Cap.Outbox.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.Ef/Dex.Cap.Outbox.Ef.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <PackageVersion>2.3.6</PackageVersion>
+    <PackageTags>outbox business-transaction consistency EF implementation</PackageTags>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <!--Для NuGet-->
