--- a/src/Dex.Cap/Dex.Cap.Outbox.Ef/Dex.Cap.Outbox.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.Ef/Dex.Cap.Outbox.Ef.csproj
@@ -4,8 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <PackageVersion>2.3.6</PackageVersion>
+    <PackageVersion>2.3.7</PackageVersion>
     <PackageTags>outbox business-transaction consistency EF implementation</PackageTags>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <!--Для NuGet-->
