--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,8 +31,10 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
 
-      # Create the NuGet package in the folder from the environment variable NuGetDirectory
-      - run: dotnet build --configuration Release ./src/Dex.sln && dotnet pack --configuration Release --output ${{ env.NuGetDirectory }} ./src/Dex.sln
+      - run: |
+          foreach($file in (Get-ChildItem ./ -Recurse -Include *.sln)) {
+              dotnet build --configuration Release $file && dotnet pack --configuration Release --output ${{ env.NuGetDirectory }} $file
+          }
 
       # Publish the NuGet package as an artifact, so they can be used in the following jobs
       - uses: actions/upload-artifact@v3
@@ -73,7 +75,10 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
       - name: Run tests
-        run: dotnet test ./src/Dex.sln --configuration Release
+        run: |
+          foreach($file in (Get-ChildItem ./ -Recurse -Include *.sln)) {
+              dotnet test --configuration Release $file
+          }
 
   deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -95,3 +100,4 @@ jobs:
           foreach($file in (Get-ChildItem "${{ env.NuGetDirectory }}" -Recurse -Include *.nupkg)) {
               dotnet nuget push $file --api-key "${{ secrets.NUGET_APIKEY }}" --source http://mikhailov.se.fvds.ru:8081/nexus/service/local/nuget/test-nuget/ --skip-duplicate
           }
+          
