--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -146,7 +146,7 @@ jobs:
           find . -name '*.nupkg' -type f -print0 |
           while IFS= read -r -d '' nuget; do
             echo "nuget push"
-            dotnet nuget push "$nuget" --api-key "${NUGET_APIKEY}" --source "${NUGET_SOURCE}" --skip-duplicate
+            dotnet nuget push "$nuget" --api-key "${{ secrets.NUGET_APIKEY }}" --source "${{ secrets.NUGET_SOURCE }}"" --skip-duplicate
           done
 
 
