--- a/src/Dex.Specification/Dex.Specifications/Dex.Specifications.csproj
+++ b/src/Dex.Specification/Dex.Specifications/Dex.Specifications.csproj
@@ -9,7 +9,7 @@
 
   <!--Для NuGet-->
   <PropertyGroup>
-    <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.Specification</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>dex team</Authors>
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
