--- a/src/Dex.Cap/Dex.Cap.Common.Ef/Dex.Cap.Common.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.Common.Ef/Dex.Cap.Common.Ef.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <PackageVersion>2.3.4</PackageVersion>
+        <PackageTags>shared exceptions, extentions and helpers</PackageTags>
     </PropertyGroup>
 
     <!--Для NuGet-->
@@ -20,13 +21,10 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    </ItemGroup>
     <!--/Для NuGet-->
-
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12"/>
     </ItemGroup>
 
 </Project>
