--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,8 +66,10 @@ jobs:
           find . -name '*.nupkg' -type f -print0 |
           while IFS= read -r -d '' nuget; do
             echo "validate nuget"
-            meziantou.validate-nuget-package "$nuget"
+            meziantou.validate-nuget-package "$nuget" --rules AssembliesMustBeOptimized
           done
+  
+  
   
 
   run_test:
@@ -145,7 +147,6 @@ jobs:
         run: |
           find . -name '*.nupkg' -type f -print0 |
           while IFS= read -r -d '' nuget; do
-            echo "nuget push" "${NUGET_SOURCE}"
             dotnet nuget push "$nuget" --api-key "${{ secrets.NUGET_APIKEY }}" --source "${{ secrets.NUGET_SOURCE }}" --skip-duplicate
           done
 
