--- a/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Consumer/Dex.MassTransit.Sample.Consumer.csproj
+++ b/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Consumer/Dex.MassTransit.Sample.Consumer.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <OutputType>Exe</OutputType>
         <Nullable>enable</Nullable>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
