--- a/src/Dex.Cap/Tests/Dex.Outbox.Command.Test/Dex.Outbox.Command.Test.csproj
+++ b/src/Dex.Cap/Tests/Dex.Outbox.Command.Test/Dex.Outbox.Command.Test.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <LangVersion>default</LangVersion>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
