refactor OnceExecutor options

--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
@@ -32,4 +32,10 @@
 		<ProjectReference Include="..\Dex.Cap.OnceExecutor\Dex.Cap.OnceExecutor.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="EfOptions.cs">
+	    <DependentUpon>IEfOptions.cs</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
 </Project>
