--- a/src/Dex.Cap/Dex.Cap.Outbox.Neo4j/Dex.Cap.Outbox.Neo4j.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.Neo4j/Dex.Cap.Outbox.Neo4j.csproj
@@ -2,12 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-        <PackageVersion>1.2.25</PackageVersion>
+        <PackageVersion>1.3.26</PackageVersion>
         <PackageTags>outbox business-transaction consistency NEO4J implementation</PackageTags>
     </PropertyGroup>
+
     <!--Для NuGet-->
     <PropertyGroup>
-        <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.Cap</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/netcore-5/src/Dex.Cap</PackageProjectUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Authors>dex team</Authors>
         <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
@@ -18,13 +19,16 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
-    <!--Для NuGet-->
-    
     <ItemGroup>
-        <ProjectReference Include="..\Dex.Cap.Outbox\Dex.Cap.Outbox.csproj" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
+    </ItemGroup>
+    <!--/Для NuGet-->
+
+    <ItemGroup>
+        <ProjectReference Include="..\Dex.Cap.Outbox\Dex.Cap.Outbox.csproj"/>
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Neo4jClient" Version="4.1.26" />
+        <PackageReference Include="Neo4jClient" Version="4.1.26"/>
     </ItemGroup>
 
 </Project>
