--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
-		<PackageVersion>2.8.36</PackageVersion>
+		<PackageVersion>2.9.37</PackageVersion>
 	</PropertyGroup>
 
 	<!--Для NuGet-->
@@ -30,6 +30,12 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Dex.Cap.Common.Ef\Dex.Cap.Common.Ef.csproj" />
 		<ProjectReference Include="..\Dex.Cap.OnceExecutor\Dex.Cap.OnceExecutor.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="EfOptions.cs">
+	    <DependentUpon>IEfOptions.cs</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 
 </Project>
