AT-251 feat: реализовать работу через discriminator типа

--- a/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <PackageVersion>1.5.32</PackageVersion>
         <PackageTags>outbox business-transaction consistency</PackageTags>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
