--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.ClickHouse/Dex.Cap.OnceExecutor.ClickHouse.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.ClickHouse/Dex.Cap.OnceExecutor.ClickHouse.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <PackageVersion>2.9.37</PackageVersion>
+    <PackageVersion>2.9.40</PackageVersion>
   </PropertyGroup>
 
   <!--Для NuGet-->
@@ -21,7 +21,7 @@
     <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
   </ItemGroup>
   <!--/Для NuGet-->
 
