--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.Neo4j/Dex.Cap.OnceExecutor.Neo4j.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.Neo4j/Dex.Cap.OnceExecutor.Neo4j.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-        <PackageVersion>2.9.36</PackageVersion>
+        <PackageVersion>2.9.40</PackageVersion>
     </PropertyGroup>
     <!--Для NuGet-->
     <PropertyGroup>
@@ -20,16 +20,16 @@
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
     </ItemGroup>
     <!--/Для NuGet-->
     <ItemGroup>
-        <ProjectReference Include="..\Dex.Cap.OnceExecutor\Dex.Cap.OnceExecutor.csproj" />
+        <ProjectReference Include="..\Dex.Cap.OnceExecutor\Dex.Cap.OnceExecutor.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Dex.Neo4J" Version="1.1.27" />
-        <PackageReference Include="Neo4jClient" Version="5.1.15" />
+        <PackageReference Include="Dex.Neo4J"/>
+        <PackageReference Include="Neo4jClient" Version="5.1.15"/>
     </ItemGroup>
 
 </Project>
