upgrade Dex.Events

--- a/src/Dex.Events/Dex.Events.Distributed/Dex.Events.Distributed.csproj
+++ b/src/Dex.Events/Dex.Events.Distributed/Dex.Events.Distributed.csproj
@@ -22,20 +22,20 @@
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
-      <PackageReference Include="Dex.Extensions" Version="1.0.11" />
-      <PackageReference Include="MassTransit" Version="8.0.9" />
-      <PackageReference Include="MassTransit.Abstractions" Version="8.0.9" />
-      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+        <PackageReference Include="Dex.Extensions"/>
+        <PackageReference Include="MassTransit"/>
+        <PackageReference Include="MassTransit.Abstractions"/>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
     </ItemGroup>
     <!--/Для NuGet-->
 
     <ItemGroup>
-      <Compile Update="DistributedEventHandler.cs">
-        <DependentUpon>IDistributedEventHandler.cs</DependentUpon>
-      </Compile>
-      <Compile Update="DistributedEventRaiser.cs">
-        <DependentUpon>IDistributedEventRaiser.cs</DependentUpon>
-      </Compile>
+        <Compile Update="DistributedEventHandler.cs">
+            <DependentUpon>IDistributedEventHandler.cs</DependentUpon>
+        </Compile>
+        <Compile Update="DistributedEventRaiser.cs">
+            <DependentUpon>IDistributedEventRaiser.cs</DependentUpon>
+        </Compile>
     </ItemGroup>
 
 </Project>
