--- a/src/Dex.Events/Dex.Events.Distributed.OutboxExtensions/Dex.Events.Distributed.OutboxExtensions.csproj
+++ b/src/Dex.Events/Dex.Events.Distributed.OutboxExtensions/Dex.Events.Distributed.OutboxExtensions.csproj
@@ -23,7 +23,7 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Dex.Cap.Outbox" Version="2.3.6" />
-      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+      <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
     </ItemGroup>
     <!--/Для NuGet-->
 
