--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -34,6 +34,7 @@
     <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
     <PackageReference Update="Neo4jClient" Version="5.1.15" />
     <PackageReference Update="MassTransit*" Version="8.2.2" />
+    <PackageReference Update="MassTransit.TestFramework" Version="8.0.12" />
     
     <!--microsoft asp.net core -->
     <PackageReference Update="Microsoft.AspNetCore.DataProtection*" Version="$(FrameworkVersion)"/>
